--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\" ",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "pm2 dist/index.js -i max --name openai-gpt-backend"
   },
   "keywords": [],
   "author": "",
