add new command to start application in light mode with pm2

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\" ",
     "build": "tsc",
-    "start": "pm2 start dist/index.js -i max --name openai-gpt-backend"
+    "start": "pm2 start dist/index.js -i max --name openai-gpt",
+    "start:light": "pm2 start dist/index.js --name openai-gpt"
   },
   "keywords": [],
   "author": "",
